# elysium

./: .gitignore  Cargo.toml  README.md  build  diff.diff  license  load  readme.md  rload  toolbox.sh  uload
crates/atomic_float/: Cargo.toml
crates/atomic_float/src/: lib.rs
crates/daisy_chain/: Cargo.toml  README.md
crates/daisy_chain/src/: lib.rs
crates/iced/gl/: Cargo.toml
crates/iced/gl-glyph/: Cargo.toml
crates/iced/gl-glyph/src/: builder.rs  lib.rs
crates/iced/gl-glyph/src/pipeline/: cache.rs  compatibility.rs  core.rs
crates/iced/gl/src/: backend.rs  lib.rs  program.rs  quad.rs  text.rs  triangle.rs
crates/iced/gl/src/quad/: compatibility.rs  core.rs
crates/iced/gl/src/window/: compositor.rs
crates/input/: Cargo.toml  readme.md
crates/input/src/: keyboard.rs  lib.rs  mouse.rs
crates/managed/: Cargo.toml
crates/material/: Cargo.toml
crates/material/examples/: print.rs
crates/material/src/: lib.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs  matrix3x4.rs  quaternion.rs  vec2.rs  vec3.rs  vec4_aligned.rs
crates/mem/: Cargo.toml  readme.md
crates/mem/examples/: lol.rs
crates/mem/src/: address.rs  lib.rs  page.rs
crates/menu/: Cargo.toml  readme.md
crates/menu/src/: assets.rs  controls.rs  lib.rs  menu.rs  scene.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/networked/: Cargo.toml
crates/networked/src/: api.rs  class.rs  entry.rs  lib.rs
crates/pattern/: Cargo.toml
crates/pattern/examples/: lol.rs
crates/pattern/src/: lib.rs  panic.rs  parse.rs  util.rs  validate.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs  surface.rs
crates/physics/src/surface/: sounds.rs
crates/sdk/: Cargo.toml  readme.md
crates/sdk-math/: Cargo.toml
crates/sdk-math/src/: lib.rs  matrix3x4.rs  vec3.rs
crates/sdk/client/: Cargo.toml
crates/sdk/client/src/: lib.rs
crates/sdk/engine/: Cargo.toml
crates/sdk/engine/src/: lib.rs
crates/sdk/src/: animation_layer.rs  animation_state.rs  beam.rs  class.rs  client.rs  client_mode.rs  console.rs  convar.rs  engine.rs  entity.rs  entry.rs  ffi.rs  frame.rs  globals.rs  hit_group.rs  id.rs  input.rs  input_system.rs  interfaces.rs  item_kind.rs  lib.rs  macros.rs  material.rs  network.rs  pad.rs  panorama.rs  player_model.rs  render.rs  sound.rs  steam.rs  trace.rs  utl_map.rs  utl_mem.rs  utl_string.rs  utl_vec.rs  var.rs  view.rs  weapon.rs
crates/sdk/src/client/: class.rs  classes.rs  property.rs  table.rs
crates/sdk/src/entity/: id.rs  list.rs  networkable.rs  renderable.rs
crates/sdk/src/id/: bits.rs  instance.rs  kind.rs  universe.rs
crates/sdk/src/input/: button.rs  mouse.rs  state.rs
crates/sdk/src/panorama/: engine.rs  panel.rs  panorama_engine.rs
crates/sdk/src/trace/: contents.rs  displacement.rs  filter.rs  hit_group.rs  mask.rs  plane.rs  ray.rs  summary.rs  surf.rs  surface.rs  tex.rs
crates/sdk/trace/: Cargo.toml
crates/sdk/trace/src/: filter.rs
crates/sdk2/: Cargo.toml
crates/sdk2/src/: animation_state.rs  mem.rs
crates/sdk_primitives/: Cargo.toml
crates/sdk_primitives/src/: angle.rs  f32ext.rs  lib.rs  matrix3x4.rs  vector.rs  vector2d.rs
crates/slices/: Cargo.toml
crates/slices/src/: lib.rs
crates/spirit/: Cargo.toml
crates/spirit/src/: lib.rs  opaque.rs  slice.rs  str.rs  util.rs
crates/state/: Cargo.toml  readme.md
crates/state/src/: cache.rs  hooks.rs  lib.rs  local.rs  material.rs  shared.rs  shared_box.rs  shared_option.rs
crates/state2/: Cargo.toml
crates/state2/src/: cached_player.rs  lib.rs  material.rs
crates/theme/: Cargo.toml  readme.md
crates/theme/src/: button.rs  checkbox.rs  container.rs  lib.rs  progress_bar.rs  radio.rs  rule.rs  scrollable.rs  slider.rs  text_input.rs  toggler.rs
crates/toolbox/: Cargo.toml
crates/toolbox-helper/: Cargo.toml
crates/toolbox-helper/src/: injector.rs  main.rs  options.rs  yama.rs
crates/toolbox/src/: helper.rs  main.rs  options.rs  steam.rs
crates/util/: Cargo.toml
crates/util/examples/: foo.rs
crates/util/src/: lib.rs  traits.rs
crates/virt/: Cargo.toml
crates/virt/src/: lib.rs  signature.rs
crates/vptr/: Cargo.toml  README.md
crates/vptr/examples/: relative.rs  vtable.rs
crates/vptr/src/: lib.rs  ptr.rs  virt.rs
src/: airstuck.rs  angle.rs  animation_layer.rs  animation_state.rs  bones.rs  chams.rs  client.rs  command.rs  console.rs  consts.rs  contents.rs  debug.rs  engine.rs  entities.rs  entity.rs  entity_id.rs  frame.rs  global.rs  globals.rs  hit_group.rs  hooks.rs  hooks2.rs  input.rs  interface.rs  interfaces.rs  intrinsics.rs  islice.rs  lib.rs  libraries.rs  library.rs  log.rs  managed.rs  material.rs  matrix3x4.rs  mem.rs  model.rs  move_kind.rs  movement.rs  netvars.rs  networked.rs  (+13 more)
src/client/: class.rs  classes.rs  property.rs  table.rs
src/console/: var.rs
src/entity/: fog.rs  id.rs  list.rs  networkable.rs  player.rs  renderable.rs  weapon.rs  weapon_info.rs
src/hooks/: create_move.rs  draw_model_execute.rs  frame_stage_notify.rs  override_view.rs  poll_event.rs  sdl.rs  swap_window.rs  write_user_command_delta_to_buffer.rs
src/hooks/sdl/: main.rs  poll_event.rs  swap_window.rs
src/input/: button.rs  joystick.rs  mouse.rs  state.rs
src/managed/: handle.rs
src/material/: materials.rs  var.rs
src/networked/: api.rs  class.rs  entry.rs
src/sdk/: animation_state.rs  client.rs  command.rs  console.rs  engine.rs  engine_trace.rs  entities.rs  entity.rs  entity_id.rs  frame_stage.rs  hit_group.rs  input.rs  item_kind.rs  netvars.rs  player_state.rs  skybox.rs
src/sdk/input/: joystick.rs  state.rs
src/trace/: filter.rs  plane.rs  ray.rs  summary.rs  surface.rs
