[package]
name    = "providence"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies.palette]
version = "0.6"

[dependencies.atomic_float]
version = "0.1"

[dependencies.ctor]
version = "0.1"

#[dependencies.iced_glutin]
#default-features = false
#features = ["debug"]
#git = "https://github.com/iced-rs/iced.git"

#[dependencies.iced_glow]
#default-features = false
#features = ["default_system_font"]
#git = "https://github.com/iced-rs/iced.git"

#[dependencies.iced_winit]
#default-features = false
#features = ["debug"]
#git = "https://github.com/iced-rs/iced.git"

#[dependencies.glium]
#default-features = false
#version = "0.30"
#features = ["glutin"]

#[dependencies.glow]
#default-features = false
#version = "0.6"

[dependencies.daisy_chain]
path = "crates/daisy_chain"

[dependencies.findshlibs]
version = "0.10"

[dependencies.libc]
version = "0.2"

[dependencies.libloading]
version = "0.7"

[dependencies.parking_lot]
version = "0.11"

[dependencies.phf]
features = ["macros"]
version = "0.10"

[dependencies.providence-math]
path = "crates/math"

[dependencies.providence-model]
path = "crates/model"

[dependencies.providence-material]
path = "crates/material"

[dependencies.providence-networked]
path = "crates/networked"

[dependencies.providence-pattern]
path = "crates/pattern"

[dependencies.providence-state]
path = "crates/state"

[dependencies.providence-util]
path = "crates/util"

[dependencies.rand]
version = "0.8"

[dependencies.regex]
version = "1.5"

[dependencies.sdk]
path = "crates/sdk"

[dependencies.spirit]
path = "crates/spirit"

[dependencies.vek]
features = ["repr_simd"]
version = "0.15"

[dependencies.tracing]
default-features = false
features = ["std", "attributes"]
version = "0.1"

[dependencies.tracing-subscriber]
default-features = false
features = ["ansi", "fmt", "env-filter", "std"]
version = "0.3"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
