[package]
edition = "2021"
name = "elysium"
version = "0.0.0"

[dependencies.palette]
version = "0.6"

[dependencies.atomic_float]
version = "0.1"

[dependencies.daisy_chain]
path = "crates/daisy_chain"

[dependencies.findshlibs]
version = "0.10"

[dependencies.parking_lot]
version = "0.11"

[dependencies.phf]
features = ["macros"]
version = "0.10"

[dependencies.elysium-math]
path = "crates/math"

[dependencies.providence-model]
path = "crates/model"

[dependencies.providence-networked]
path = "crates/networked"

[dependencies.providence-pattern]
path = "crates/pattern"

[dependencies.providence-util]
path = "crates/util"

[dependencies.rand]
version = "0.8"

[dependencies.regex]
version = "1.5"

[dependencies.spirit]
path = "crates/spirit"

[dependencies.tracing]
default-features = false
features = ["std", "attributes"]
version = "0.1"

[dependencies.tracing-subscriber]
default-features = false
features = ["ansi", "fmt", "env-filter", "std"]
version = "0.3"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies.elysium-dl]
path = "crates/library/dl"

[dependencies.elysium-gl]
path = "crates/library/gl"

[dependencies.elysium-input]
path = "crates/input"

[dependencies.elysium-mem]
path = "crates/mem"

[dependencies.elysium-menu]
path = "crates/menu"

[dependencies.elysium-sdl]
path = "crates/library/sdl"

[dependencies.elysium-state]
path = "crates/state"

[dependencies.elysium-theme]
path = "crates/theme"

[dependencies.frosting]
git = "https://github.com/elysian6969/frosting.git"

[dependencies.iced_elysium-gl]
path = "crates/iced/gl"

[dependencies.iced_native]
git = "https://github.com/iced-rs/iced"

[dependencies.elysium-sdk]
path = "crates/sdk"

[dependencies.sdl2-sys]
version = "0.35"

[workspace]
members = [
    "crates/iced/gl",
    "crates/iced/gl-glyph",
    "crates/input",
    "crates/library/dl",
    "crates/library/gl",
    "crates/library/sdl",
    "crates/mem",
    "crates/menu",
    "crates/sdk",
    "crates/state",
    "crates/theme",
]
