[package]
edition = "2021"
name = "elysium-menu"
version = "0.0.0"

[dependencies.elysium-dl]
default-features = false
path = "../library/dl"

[dependencies.elysium-gl]
default-features = false
path = "../library/gl"

[dependencies.elysium-mem]
default-features = false
path = "../mem"

[dependencies.elysium-sdl]
default-features = false
path = "../library/sdl"

[dependencies.elysium-theme]
default-features = false
path = "../theme"

[dependencies.frosting]
default-features = false
git = "https://github.com/elysian6969/frosting.git"

[dependencies.iced_elysium-gl]
default-features = false
path = "../iced/gl"

[dependencies.iced_native]
default-features = false
git = "https://github.com/iced-rs/iced"

[dependencies.sdl2-sys]
default-features = false
version = "0.35"
