[package]
edition = "2021"
name = "elysium-sdk"
version = "0.0.0"

[dependencies.daisy_chain]
path = "../daisy_chain"

[dependencies.spirit]
path = "../spirit"

[dependencies.elysium-math]
path = "../math"

[dependencies.elysium-mem]
path = "../mem"

[dependencies.frosting]
default-features = false
git = "https://github.com/elysian6969/frosting"

[dependencies.phf]
default-features = false
features = ["macros"]
version = "0.10"
