[package]
name = "iced_elysium-gl"
version = "0.2.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A elysium-gl renderer for iced"
license = "MIT AND OFL-1.1"
repository = "https://github.com/hecrj/iced"

[features]
canvas = ["iced_graphics/canvas"]
qr_code = ["iced_graphics/qr_code"]
default_system_font = ["iced_graphics/font-source"]
# Not supported yet!
image = []
svg = []

[dependencies.elysium-gl]
path = "../../library/gl"

[dependencies.elysium-gl-glyph]
path = "../gl-glyph"

[dependencies]
glyph_brush = "0.7"
euclid = "0.22"
bytemuck = "1.4"
log = "0.4"

[dependencies.iced_native]
git = "https://github.com/iced-rs/iced"

[dependencies.iced_graphics]
features = ["font-fallback", "font-icons", "opengl"]
git = "https://github.com/iced-rs/iced"
